# Codify

./: Instruction.md  LICENSE  P.md  next.config.ts  package-lock.json  package.json
Docs/: ProjectCode_ Comprehensive Technical Strategy for.md  projectcode-blueprint.md  projectcode-complete-technical-spec.md  projectcode-implementation-guide.md  projectcode-ui-ux-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/storage/: mod.rs
src/app/: globals.css  page.tsx
src/components/editor/: CodeEditor.tsx
src/components/layout/: HeaderBar.tsx  Inspector.tsx  Sidebar.tsx
src/components/terminal/: Terminal.tsx
src/lib/: tauri-api.ts
